* Info.plist   Renamed services menu entry to match other apps providing the same service.
* German.lproj/ServicesMenu.strings
  Localization for the services menu entry.

--- a/.gitattributes
+++ b/.gitattributes
@@ -303,6 +303,7 @@ subethaedit/German.lproj/SavePanelAccessory.nib/keyedobjects.nib -text
 subethaedit/German.lproj/SelectEncodingsPanel.nib/classes.nib -text
 subethaedit/German.lproj/SelectEncodingsPanel.nib/info.nib -text
 subethaedit/German.lproj/SelectEncodingsPanel.nib/objects.nib -text
+subethaedit/German.lproj/ServicesMenu.strings -text
 subethaedit/German.lproj/Setup.nib/classes.nib -text
 subethaedit/German.lproj/Setup.nib/info.nib -text
 subethaedit/German.lproj/Setup.nib/keyedobjects.nib -text
