--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -312,7 +312,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>SubEthaEdit/New Document Containing Selection</string>
+				<string>SubEthaEdit/New Window Containing Selection</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>openSelection</string>
