- added ToolbarIconGenericScript to project - a easy generic icon for scripters who want to have a toolbaricon

--- a/.gitattributes
+++ b/.gitattributes
@@ -1364,6 +1364,7 @@ subethaedit/artwork/SymbolWarn.tiff -text
 subethaedit/artwork/ToolbarIconBuild.tiff -text
 subethaedit/artwork/ToolbarIconBuildAndRun.tiff -text
 subethaedit/artwork/ToolbarIconColorChooser.tiff -text
+subethaedit/artwork/ToolbarIconGenericScript.tiff -text
 subethaedit/artwork/ToolbarIconOpenURL.png -text
 subethaedit/artwork/ToolbarIconOpenURL.psd -text
 subethaedit/artwork/ToolbarIconRun.tiff -text
