--- a/.gitattributes
+++ b/.gitattributes
@@ -89,6 +89,7 @@ artwork/website/codingmonkeys.psd -text
 artwork/website/createdwith.psd -text
 artwork/website/download.psd -text
 artwork/website/pombanner.psd -text
+artwork/website/see25banner.psd -text
 artwork/website/splash-overnight.psd -text
 artwork/website/splash.psd -text
 artwork/website/version2.psd -text
