--- a/.gitattributes
+++ b/.gitattributes
@@ -209,6 +209,7 @@ subethaedit/English.lproj/SavePanelAccessory.nib/keyedobjects.nib -text
 subethaedit/English.lproj/SelectEncodingsPanel.nib/classes.nib -text
 subethaedit/English.lproj/SelectEncodingsPanel.nib/info.nib -text
 subethaedit/English.lproj/SelectEncodingsPanel.nib/objects.nib -text
+subethaedit/English.lproj/ServicesMenu.strings -text
 subethaedit/English.lproj/Setup.nib/classes.nib -text
 subethaedit/English.lproj/Setup.nib/info.nib -text
 subethaedit/English.lproj/Setup.nib/keyedobjects.nib -text
