- added cursor test sample code for map to take to wwdc

--- a/.gitattributes
+++ b/.gitattributes
@@ -1452,6 +1452,25 @@ tool/BEEPSample/TCMBEEPSession.m -text
 tool/BEEPSample/TCMBEEPSimpleSendProfile.h -text
 tool/BEEPSample/TCMBEEPSimpleSendProfile.m -text
 tool/BEEPSample/main.m -text
+tool/CursorTest/AppController.h -text
+tool/CursorTest/AppController.m -text
+tool/CursorTest/CursorTest.xcodeproj/dwagner.mode2 -text
+tool/CursorTest/CursorTest.xcodeproj/dwagner.pbxuser -text
+tool/CursorTest/CursorTest.xcodeproj/project.pbxproj -text
+tool/CursorTest/CursorTest_Prefix.pch -text
+tool/CursorTest/English.lproj/InfoPlist.strings -text
+tool/CursorTest/English.lproj/MainMenu.nib/classes.nib -text
+tool/CursorTest/English.lproj/MainMenu.nib/info.nib -text
+tool/CursorTest/English.lproj/MainMenu.nib/keyedobjects.nib -text
+tool/CursorTest/Info.plist -text
+tool/CursorTest/InvertedIBeam.tiff -text
+tool/CursorTest/NSCursorSEEAdditions.h -text
+tool/CursorTest/NSCursorSEEAdditions.m -text
+tool/CursorTest/ScrollView.h -text
+tool/CursorTest/ScrollView.m -text
+tool/CursorTest/TextView.h -text
+tool/CursorTest/TextView.m -text
+tool/CursorTest/main.m -text
 tool/ExpatSimple/ExpatSimple.1 -text
 tool/ExpatSimple/ExpatSimple.xcode/project.pbxproj -text
 tool/ExpatSimple/ExpatSimple_Prefix.pch -text
