- somewhat fixed SEE-145: cursor ist too dark when background is black. Although the solution disables the whole tracking rect of the TextView which could be potentially harmful / remove features of the textview. map will investigate on WWDC - added "copy thumbnail of current document to pb" as a debug function - added necessary files to project

--- a/.gitattributes
+++ b/.gitattributes
@@ -656,6 +656,8 @@ subethaedit/NSApplicationTCMAdditions.h -text
 subethaedit/NSApplicationTCMAdditions.m -text
 subethaedit/NSColorTCMAdditions.h -text
 subethaedit/NSColorTCMAdditions.m -text
+subethaedit/NSCursorSEEAdditions.h -text
+subethaedit/NSCursorSEEAdditions.m -text
 subethaedit/NSImageTCMAdditions.h -text
 subethaedit/NSImageTCMAdditions.m -text
 subethaedit/NSMenuTCMAdditions.h -text
