--- a/.gitattributes
+++ b/.gitattributes
@@ -1754,6 +1754,9 @@ tool/addressbookkiller/addressbookkiller_Prefix.pch -text
 tool/autodoc -text
 tool/convertcolor.pl -text
 tool/customers2vcf.pl -text
+tool/dsa-signing/dsa_priv.pem -text
+tool/dsa-signing/dsa_pub.pem -text
+tool/dsa-signing/sign -text
 tool/filterClasses.sh -text
 tool/seeserver.pl -text
 tool/serials/attackserial.pl -text
