Adding MyDreamApp banner

--- a/.gitattributes
+++ b/.gitattributes
@@ -88,6 +88,7 @@ artwork/website/cocoaradiobanner.psd -text
 artwork/website/codingmonkeys.psd -text
 artwork/website/createdwith.psd -text
 artwork/website/download.psd -text
+artwork/website/mydreamapp-werbung.psd -text
 artwork/website/pombanner.psd -text
 artwork/website/see25banner.psd -text
 artwork/website/splash-overnight.psd -text
