Adding my customized, simplified and localized version of HDCrashReporter to trunk/. Still misses a few bits and will be hooked in the main project later.

--- a/.gitattributes
+++ b/.gitattributes
@@ -152,6 +152,25 @@ subethaedit/ButtonScrollView.h -text
 subethaedit/ButtonScrollView.m -text
 subethaedit/CandyBarView.h -text
 subethaedit/CandyBarView.m -text
+subethaedit/CrashReporter/CrashReporter.xcodeproj/olivier.pbxuser -text
+subethaedit/CrashReporter/CrashReporter.xcodeproj/olivier.perspective -text
+subethaedit/CrashReporter/CrashReporter.xcodeproj/pittenau.mode2 -text
+subethaedit/CrashReporter/CrashReporter.xcodeproj/pittenau.pbxuser -text
+subethaedit/CrashReporter/CrashReporter.xcodeproj/project.pbxproj -text
+subethaedit/CrashReporter/English.lproj/InfoPlist.strings -text
+subethaedit/CrashReporter/English.lproj/crashReporter.nib/classes.nib -text
+subethaedit/CrashReporter/English.lproj/crashReporter.nib/info.nib -text
+subethaedit/CrashReporter/English.lproj/crashReporter.nib/keyedobjects.nib -text
+subethaedit/CrashReporter/German.lproj/crashReporter.nib/classes.nib -text
+subethaedit/CrashReporter/German.lproj/crashReporter.nib/info.nib -text
+subethaedit/CrashReporter/German.lproj/crashReporter.nib/keyedobjects.nib -text
+subethaedit/CrashReporter/Info.plist -text
+subethaedit/CrashReporter/NSURLRequestPostAdditions.h -text
+subethaedit/CrashReporter/NSURLRequestPostAdditions.m -text
+subethaedit/CrashReporter/crashReporter.h -text
+subethaedit/CrashReporter/crashReporter.m -text
+subethaedit/CrashReporter/crashReporter_Prefix.pch -text
+subethaedit/CrashReporter/license.txt -text
 subethaedit/Debug/DebugBEEP.nib/classes.nib -text
 subethaedit/Debug/DebugBEEP.nib/info.nib -text
 subethaedit/Debug/DebugBEEP.nib/keyedobjects.nib -text
