Added background image to the disk image. The disk image currently doesn't include a symolic link to /Applications. Discuss this issue in SEE-1092.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1508,6 +1508,7 @@ subethaedit/artwork/WaitPipe.png -text
 subethaedit/artwork/WebReload.tiff -text
 subethaedit/artwork/codingmonkeys.png -text
 subethaedit/artwork/debug.tiff -text
+subethaedit/artwork/dmg_background.png -text
 subethaedit/artwork/monkey32.png -text
 subethaedit/artwork/style.icns -text
 subethaedit/createDiskImage.sh -text
