Background image with rounded arrow. Also added graffle source file.

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@ artwork/Bonjour[!!-~]Icons/Bonjour_24_256.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_24_Millions.tif -text
 artwork/Bonjour[!!-~]Icons/Bonjour_32_Millions.tif -text
 artwork/LogoGreenFullSize.psd -text
+artwork/dmg_background.graffle -text
 artwork/icons/Document-b3-128.psd -text
 artwork/icons/Document-b3-16.psd -text
 artwork/icons/Document-b3-32.psd -text
