- removed user data and set svn:ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+subethaedit/CrashReporter/CrashReporter.xcodeproj/*.mode2
+subethaedit/CrashReporter/CrashReporter.xcodeproj/*.pbxuser
+subethaedit/CrashReporter/CrashReporter.xcodeproj/*.perspective
 subethaedit/SubEthaEdit.xcodeproj/*.mode1
 subethaedit/SubEthaEdit.xcodeproj/*.mode2
 subethaedit/SubEthaEdit.xcodeproj/*.pbxuser
