Added german localization of the EncodingDoctor.

--- a/.gitattributes
+++ b/.gitattributes
@@ -318,6 +318,9 @@ subethaedit/German.lproj/DocumentProxy.nib/keyedobjects.nib -text
 subethaedit/German.lproj/EditPrefs.nib/classes.nib -text
 subethaedit/German.lproj/EditPrefs.nib/info.nib -text
 subethaedit/German.lproj/EditPrefs.nib/keyedobjects.nib -text
+subethaedit/German.lproj/EncodingDoctor.nib/classes.nib -text
+subethaedit/German.lproj/EncodingDoctor.nib/info.nib -text
+subethaedit/German.lproj/EncodingDoctor.nib/keyedobjects.nib -text
 subethaedit/German.lproj/Export.nib/classes.nib -text
 subethaedit/German.lproj/Export.nib/info.nib -text
 subethaedit/German.lproj/Export.nib/keyedobjects.nib -text
