Adding "Edit in SubEthaEdit" InputManager based on Gus' FlyOpts.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1906,6 +1906,31 @@ tool/dsa-signing/dsa_priv.pem -text
 tool/dsa-signing/dsa_pub.pem -text
 tool/dsa-signing/sign -text
 tool/filterClasses.sh -text
+tool/seeflyopts/flyopts.xcodeproj/gus.mode1 -text
+tool/seeflyopts/flyopts.xcodeproj/gus.pbxuser -text
+tool/seeflyopts/flyopts.xcodeproj/pittenau.mode2 -text
+tool/seeflyopts/flyopts.xcodeproj/pittenau.pbxuser -text
+tool/seeflyopts/flyopts.xcodeproj/project.pbxproj -text
+tool/seeflyopts/resources/English.lproj/InfoPlist.strings -text
+tool/seeflyopts/resources/English.lproj/ODBEditInProgressSheet.nib/classes.nib -text
+tool/seeflyopts/resources/English.lproj/ODBEditInProgressSheet.nib/info.nib -text
+tool/seeflyopts/resources/English.lproj/ODBEditInProgressSheet.nib/keyedobjects.nib -text
+tool/seeflyopts/resources/Info -text
+tool/seeflyopts/resources/Info.plist -text
+tool/seeflyopts/resources/version.plist -text
+tool/seeflyopts/src/bbedit/FOODBEditor.h -text
+tool/seeflyopts/src/bbedit/FOODBEditor.m -text
+tool/seeflyopts/src/bbedit/FOODBEditorController.h -text
+tool/seeflyopts/src/bbedit/FOODBEditorController.m -text
+tool/seeflyopts/src/bbedit/NSAppleEventDescriptor-Extensions.h -text
+tool/seeflyopts/src/bbedit/NSAppleEventDescriptor-Extensions.m -text
+tool/seeflyopts/src/bbedit/NSTextView(ODBIAdditions).h -text
+tool/seeflyopts/src/bbedit/NSTextView(ODBIAdditions).m -text
+tool/seeflyopts/src/bbedit/ODBEditorSuite.h -text
+tool/seeflyopts/src/flyopts.h -text
+tool/seeflyopts/src/flyopts.m -text
+tool/seeflyopts/src/flyopts.pch -text
+tool/seeflyopts/src/main.m -text
 tool/seeserver.pl -text
 tool/serials/attackserial.pl -text
 tool/serials/checkserial.pl -text
