Cleaning up project

--- a/.gitattributes
+++ b/.gitattributes
@@ -1906,9 +1906,7 @@ tool/dsa-signing/dsa_priv.pem -text
 tool/dsa-signing/dsa_pub.pem -text
 tool/dsa-signing/sign -text
 tool/filterClasses.sh -text
-tool/seeflyopts/flyopts.xcodeproj/gus.mode1 -text
-tool/seeflyopts/flyopts.xcodeproj/gus.pbxuser -text
-tool/seeflyopts/flyopts.xcodeproj/project.pbxproj -text
+tool/seeflyopts/Edit[!!-~]in[!!-~]SubEthaEdit.xcodeproj/project.pbxproj -text
 tool/seeflyopts/resources/English.lproj/InfoPlist.strings -text
 tool/seeflyopts/resources/English.lproj/ODBEditInProgressSheet.nib/classes.nib -text
 tool/seeflyopts/resources/English.lproj/ODBEditInProgressSheet.nib/info.nib -text
