--- a/tool/seeflyopts/resources/Info.plist
+++ b/tool/seeflyopts/resources/Info.plist
@@ -5,11 +5,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>flyopts</string>
+	<string>Edit in SubEthaEdit</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.flyingmeat.flyopts</string>
+	<string>de.codingmonkeys.EditInSubEthaEdit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
