Fixed [SEE-1175]: Close command doesn't close about window
Subclassed NSWindow to catch the -performClose: action. Subclassed NSWindow
is used for PlainTextWindows which redirect the action to -closeTab:.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1265,6 +1265,8 @@ subethaedit/PlainTextDocument.h -text
 subethaedit/PlainTextDocument.m -text
 subethaedit/PlainTextEditor.h -text
 subethaedit/PlainTextEditor.m -text
+subethaedit/PlainTextWindow.h -text
+subethaedit/PlainTextWindow.m -text
 subethaedit/PlainTextWindowController.h -text
 subethaedit/PlainTextWindowController.m -text
 subethaedit/PlainTextWindowControllerTabContext.h -text
