Checking in PortMapper tool. Has no interface currently, maps port 6666 to local machine. See PortMapper.m for details.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1742,6 +1742,50 @@ tool/ExpatSimple/libexpat.a -text
 tool/ExpatSimple/main.m -text
 tool/HTMLTemplate.html -text
 tool/LaTeXTemplate.latex -text
+tool/PortMapper/Controller.h -text
+tool/PortMapper/Controller.m -text
+tool/PortMapper/English.lproj/InfoPlist.strings -text
+tool/PortMapper/English.lproj/MainMenu.nib/classes.nib -text
+tool/PortMapper/English.lproj/MainMenu.nib/info.nib -text
+tool/PortMapper/English.lproj/MainMenu.nib/keyedobjects.nib -text
+tool/PortMapper/Info.plist -text
+tool/PortMapper/PortMapper.h -text
+tool/PortMapper/PortMapper.m -text
+tool/PortMapper/PortMapper.xcodeproj/project.pbxproj -text
+tool/PortMapper/PortMapper_Prefix.pch -text
+tool/PortMapper/bencode.h -text
+tool/PortMapper/choking.h -text
+tool/PortMapper/clients.h -text
+tool/PortMapper/completion.h -text
+tool/PortMapper/fastresume.h -text
+tool/PortMapper/fdlimit.c -text
+tool/PortMapper/fdlimit.h -text
+tool/PortMapper/http.c -text
+tool/PortMapper/http.h -text
+tool/PortMapper/inout.h -text
+tool/PortMapper/internal.h -text
+tool/PortMapper/main.m -text
+tool/PortMapper/metainfo.h -text
+tool/PortMapper/natpmp.c -text
+tool/PortMapper/natpmp.h -text
+tool/PortMapper/net.c -text
+tool/PortMapper/net.h -text
+tool/PortMapper/peer.h -text
+tool/PortMapper/peermessages.h -text
+tool/PortMapper/peerparse.h -text
+tool/PortMapper/peerutils.h -text
+tool/PortMapper/platform.c -text
+tool/PortMapper/platform.h -text
+tool/PortMapper/ratecontrol.h -text
+tool/PortMapper/sha1.h -text
+tool/PortMapper/tracker.h -text
+tool/PortMapper/transmission.h -text
+tool/PortMapper/upnp.c -text
+tool/PortMapper/upnp.h -text
+tool/PortMapper/utils.c -text
+tool/PortMapper/utils.h -text
+tool/PortMapper/xml.c -text
+tool/PortMapper/xml.h -text
 tool/RTFTemplate.rtf -text
 tool/RendezCon/Add.tiff -text
 tool/RendezCon/Add_Pressed.tiff -text
