--- a/.gitattributes
+++ b/.gitattributes
@@ -1526,6 +1526,7 @@ subethaedit/TexturedButtonCell.h -text
 subethaedit/TexturedButtonCell.m -text
 subethaedit/Toolbar.h -text
 subethaedit/Toolbar.m -text
+subethaedit/Typesetter.m -text
 subethaedit/URLDataProtocol.h -text
 subethaedit/URLDataProtocol.m -text
 subethaedit/URLImageView.h -text
