- added artwork for dirty close buttons - added quickhack that uses these buttons. not very clean, and doesn't update when the document gets dirty

--- a/.gitattributes
+++ b/.gitattributes
@@ -1552,6 +1552,9 @@ subethaedit/artwork/Action.tiff -text
 subethaedit/artwork/ActionPressed.tiff -text
 subethaedit/artwork/AdvancedPrefs.tiff -text
 subethaedit/artwork/Announce.tiff -text
+subethaedit/artwork/AquaTabCloseDirty_Front.tif -text
+subethaedit/artwork/AquaTabCloseDirty_Front_Pressed.tif -text
+subethaedit/artwork/AquaTabCloseDirty_Front_Rollover.tif -text
 subethaedit/artwork/CandyBar.png -text
 subethaedit/artwork/Conceal.png -text
 subethaedit/artwork/DefaultPerson.tiff -text
@@ -1632,6 +1635,9 @@ subethaedit/artwork/SymbolV.tiff -text
 subethaedit/artwork/SymbolWarn.tiff -text
 subethaedit/artwork/TCM-32x32.png -text
 subethaedit/artwork/TCM-48x48.png -text
+subethaedit/artwork/TabCloseDirty_Front.tif -text
+subethaedit/artwork/TabCloseDirty_Front_Pressed.tif -text
+subethaedit/artwork/TabCloseDirty_Front_Rollover.tif -text
 subethaedit/artwork/ToolbarIconBuild.tiff -text
 subethaedit/artwork/ToolbarIconBuildAndRun.tiff -text
 subethaedit/artwork/ToolbarIconColorChooser.tiff -text
