- Checked in the lineform banner document

--- a/.gitattributes
+++ b/.gitattributes
@@ -68,6 +68,9 @@ artwork/icons/style32.psd -text
 artwork/icons/txt.icns -text
 artwork/mockups/RendezvousBrowser.psd -text
 artwork/mockups/RendezvousBrowser2.psd -text
+artwork/website/251-Banner.lineform/data -text
+artwork/website/251-Banner.lineform/image0.png -text
+artwork/website/251-Banner.lineform/image1.png -text
 artwork/website/Autocomplete.psd -text
 artwork/website/BigPicture.de.psd -text
 artwork/website/BigPicture.psd -text
