Adding banner for 2.6

--- a/.gitattributes
+++ b/.gitattributes
@@ -71,6 +71,7 @@ artwork/mockups/RendezvousBrowser2.psd -text
 artwork/website/251-Banner.lineform/data -text
 artwork/website/251-Banner.lineform/image0.png -text
 artwork/website/251-Banner.lineform/image1.png -text
+artwork/website/26-Banner.psd -text
 artwork/website/Autocomplete.psd -text
 artwork/website/BigPicture.de.psd -text
 artwork/website/BigPicture.psd -text
