Artwork for blog post highlighting new features

--- a/.gitattributes
+++ b/.gitattributes
@@ -96,6 +96,7 @@ artwork/website/createdwith.psd -text
 artwork/website/download.psd -text
 artwork/website/mydreamapp-werbung.psd -text
 artwork/website/pombanner.psd -text
+artwork/website/see-2.6-features.psd -text
 artwork/website/see25banner.psd -text
 artwork/website/splash-overnight.psd -text
 artwork/website/splash.psd -text
