--- a/.gitattributes
+++ b/.gitattributes
@@ -163,9 +163,11 @@ subethaedit/CandyBarView.h -text
 subethaedit/CandyBarView.m -text
 subethaedit/CrashReporter/CrashReporter.xcodeproj/project.pbxproj -text
 subethaedit/CrashReporter/English.lproj/InfoPlist.strings -text
+subethaedit/CrashReporter/English.lproj/Localizable.strings -text
 subethaedit/CrashReporter/English.lproj/crashReporter.nib/classes.nib -text
 subethaedit/CrashReporter/English.lproj/crashReporter.nib/info.nib -text
 subethaedit/CrashReporter/English.lproj/crashReporter.nib/keyedobjects.nib -text
+subethaedit/CrashReporter/German.lproj/Localizable.strings -text
 subethaedit/CrashReporter/German.lproj/crashReporter.nib/classes.nib -text
 subethaedit/CrashReporter/German.lproj/crashReporter.nib/info.nib -text
 subethaedit/CrashReporter/German.lproj/crashReporter.nib/keyedobjects.nib -text
